--- a/Api/ProductTracking/Properties/launchSettings.json
+++ b/Api/ProductTracking/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/admin/User",
+      "launchUrl": "api/Account/admin/User",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
